# Timepast2

./: .gitignore  CHANGELOG.md  README.md  index.html  note.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: main.tsx  note.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MiniBar.tsx
src/features/entries/: EntryList.tsx
src/hooks/: useActiveTimer.ts  useAppData.ts
src/lib/: api.ts  noteMeta.ts  richText.ts  time.ts  timerActions.ts  types.ts
