[package]
name = "timepast"
version = "0.1.2"
description = "Local-first time entries, notes, reminders, and Pomodoro"
authors = ["TimePast"]
edition = "2021"

[lib]
name = "timepast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
thiserror = "2"
